--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chart.js": "^2.6.0"
+    "bootstrap": "^3.3.7",
+    "chart.js": "^2.6.0",
+    "jquery": "^1.12.4"
   }
 }
